Wed Jun 23 13:59:14 UTC 2010  Adam Mitz  <mitza@ociweb.com>

        * tests/DCPS/GroupPresentation/Writer.cpp:

          Continued the fix from yesterday, need to cast ACE_thread_t back to
          CORBA::Long for use in IDL struct.

Tue Jun 22 20:34:11 UTC 2010  Adam Mitz  <mitza@ociweb.com>

        * java/README:

          Updated documentation.

        * java/build_scripts/JavaTypeSupportImpl.pm:

          Removed this file.  ts_generator.cpp now does this with -Wb,java.

Tue Jun 22 19:05:34 UTC 2010  Adam Mitz  <mitza@ociweb.com>

        * dds/idl/ts_generator.cpp:

          Fixed a typo in the name of a JNI function for the Java bindings.

Tue Jun 22 16:39:35 UTC 2010  Adam Mitz  <mitza@ociweb.com>

        * performance-tests/DCPS/InfoRepo_population/InfoRepo_population.mpc:

          Make sure all code-generation happens in the *_idl project to avoid
          the publisher and subscriber projects colliding in parallel builds.

Tue Jun 22 16:13:59 UTC 2010  Adam Mitz  <mitza@ociweb.com>

        * dds/idl/opendds_idl.mpc:

          In the verbatim(gnuace), add the "all" target as a prerequisite of
          "idl_stubs" so that if the user runs "make idl_stubs", opendds_idl
          will be built first.

Tue Jun 22 15:13:00 UTC 2010  Brian Johnson  <johnsonb@ociweb.com>

        * tests/DCPS/Messenger/pub_multicast.ini:
        * tests/DCPS/Messenger/sub_multicast.ini:

          Setting the multicast group id explicilty to avoid network
          switch problem for cicada2.

Tue Jun 22 14:41:11 UTC 2010  Brian Johnson  <johnsonb@ociweb.com>

        * tests/DCPS/Crossplatform/Messenger_run_test.pl:

          Fixing problem where info repo is terminated prior to
          Subscriber unregistering.

Tue Jun 22 14:29:51 UTC 2010  Adam Mitz  <mitza@ociweb.com>

        * dds/DCPS/CoherentChangeControl.cpp:

          Added newline at the end of the file to avoid a GCC warning and for
          general consistency.

        * dds/idl/be_global.cpp:
